--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         </header>
 
         <main>
+            <picture>
+                <source media="(min-width:650px)" srcset="#">
+                <source media="(min-width:465px)" srcset="#">
+                <img src="#" alt="Image description" height="" width="">
+            </picture>
+
             <section>
                 <h2>...</h2>
             </section>
