--- a/pages/about.html
+++ b/pages/about.html
@@ -16,8 +16,93 @@
         </nav>
     </header>
     <main>
-        ...
+        <img src="#" alt="Headshot" height="" width="">
+        <section>
+            <h2>Personal Info</h2>
+            <ul>
+                <li>
+                    <h3>Education</h3>
+                    <p>University of California, San Diego</p>
+                    <p><i>9/2020 - 3/2024</i></p>
+                    <p>Major 1: B.S. in Math-Computer Science</p>
+                    <p>Major 2: B.S. in Data Science</p>
+                </li>
+                <li>
+                    <h3>Location</h3>
+                    <p>San Francisco, CA</p>
+                </li>
+                <li>
+                    <h3>Interests</h3>
+                    <p>...</p>
+                </li>
+            </ul>
+            <aside>
+                <p>Brief introduction of San Francisco</p>
+            </aside>
+        </section>
+        <hr>
+        <section>
+            <h2>Work Experience</h2>
+            <ul>
+                <li>
+                    <h3>Company 1</h3>
+                    <p>work at company 1 as a <em><strong>position</strong></em></p>
+                </li>
+                <li>
+                    <h3>Company 2</h3>
+                    <p>work at company 2 as a <em><strong>position</strong></em></p>
+                </li>
+                <li>
+                    <h3>Company 3</h3>
+                    <p>work at company 3 as a <em><strong>position</strong></em></p>
+                </li>
+                <li>
+                    <h3>Company 4</h3>
+                    <p>work at company 4 as a <em><strong>position</strong></em></p>
+                </li>
+            </ul>
+        </section>
+        <hr>
+        <section>
+            <h2>Skills</h2>
+            <ul>
+                <li>
+                    <strong>Python</strong>
+                    <div class="percent90"><span>90%</span></div>
+                </li>
+                <li>
+                    <strong>Java</strong>
+                    <div class="percent60"><span>60%</span></div>
+                </li>
+                <li>
+                    <strong>SQL</strong>
+                    <div class="percent70"><span>70%</span></div>
+                </li>
+                <li>
+                    <strong>C</strong>
+                    <div class="percent50"><span>50%</span></div>
+                </li>
+                <li>
+                    <strong>Tableau</strong>
+                    <div class="percent60"><span>60%</span></div>
+                </li>
+                <li>
+                    <strong>HTML</strong>
+                    <div class="percent70"><span>70%</span></div>
+                </li>
+                <li>
+                    <strong>CSS</strong>
+                    <div class="percent50"><span>50%</span></div>
+                </li>
+                <li>
+                    <strong>JavaScript</strong>
+                    <div class="percent50"><span>50%</span></div>
+                </li>
+
+            </ul>
+        </section>
     </main>
+    
     <footer>
         <p>&copy; 2023 Xuewen Yang</p>
     </footer>
