--- a/pages/projects.html
+++ b/pages/projects.html
@@ -19,16 +19,28 @@
         <section>
             <h2>Project 1</h2>
             <p>Description of Project 1</p>
+            <figure>
+                <img src="#" alt="Project 1 Image">
+                <figcaption>Project 1 Image Caption</figcaption>
+            </figure>
             <a href="#">View Project</a>
         </section>
         <section>
             <h2>Project 2</h2>
             <p>Description of Project 2</p>
+            <figure>
+                <img src="#" alt="Project 2 Image">
+                <figcaption>Project 2 Image Caption</figcaption>
+            </figure>
             <a href="#">View Project</a>
         </section>
         <section>
             <h2>Project 3</h2>
             <p>Description of Project 3</p>
+            <figure>
+                <img src="#" alt="Project 3 Image">
+                <figcaption>Project 3 Image Caption</figcaption>
+            </figure>
             <a href="#">View Project</a>
         </section>
     </main>
