--- a/index.html
+++ b/index.html
@@ -1,53 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Portfolio</title>
-        <meta name="description"
-            content="Portfolio Web page built by Xuewen Yang" />
-        <meta name="author" content="Xuewen Yang">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="#" rel="stylesheet">
-        <link href="#" rel="icon" />
-        <script src></script>
+<head>
+    <meta charset="UTF-8">
+    <title>Portfolio</title>
+    <meta name="description"
+        content="Portfolio Web page built by Xuewen Yang" />
+    <meta name="author" content="Xuewen Yang">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="#" rel="stylesheet">
+    <link href="#" rel="icon" />
+    <script src></script>
+</head>
+<body>
+    <header>
+        <h1>Xuewen(Daphne) Yang's Portfolio</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pages/about.html">About</a></li>
+                <li><a href="pages/projects.html">Projects</a></li>
+                <li><a href="pages/contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    </head>
-    <body>
-        <header>
-            <h1>Xuewen(Daphne) Yang's Portfolio</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="pages/about.html">About</a></li>
-                    <li><a href="pages/projects.html">Projects</a></li>
-                    <li><a href="pages/contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
+    <main>
+        <picture>
+            <source media="(min-width:650px)" srcset="#">
+            <source media="(min-width:465px)" srcset="#">
+            <img src="#" alt="Image description" height="" width="">
+        </picture>
 
-        <main>
-            <picture>
-                <source media="(min-width:650px)" srcset="#">
-                <source media="(min-width:465px)" srcset="#">
-                <img src="#" alt="Image description" height="" width="">
-            </picture>
+        <section>
+            <h2>...</h2>
+        </section>
 
-            <section>
-                <h2>...</h2>
-            </section>
+        <section>
+            <h2>...</h2>
+        </section>
 
-            <section>
-                <h2>...</h2>
-            </section>
+        <section>
+            <h2>...</h2>
+        </section>
+    </main>
 
-            <section>
-                <h2>...</h2>
-            </section>
-        </main>
+    <footer>
+        <span>&copy; 2023 Xuewen Yang</span>
+    </footer>
 
-        <footer>
-            <p>&copy; 2023 Xuewen Yang</p>
-        </footer>
-
-    </body>
+</body>
 </html>
