--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>About Me</title>
 </head>
@@ -33,9 +33,15 @@
                 </li>
                 <li>
                     <h3>Interests</h3>
-                    <p>...</p>
+                    <ol>
+                        <li>Listening to music</li>
+                        <li>Watching K-dramas and Chinese dramas</li>
+                        <li>Playing video games</li>
+                        <li>Singing</li>
+                    </ol>
                 </li>
             </ul>
+
             <aside>
                 <p>Brief introduction of San Francisco</p>
             </aside>
@@ -46,65 +52,125 @@
             <ul>
                 <li>
                     <h3>Company 1</h3>
-                    <p>work at company 1 as a <em><strong>position</strong></em></p>
+                    <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
+                    <p>Description and duties, use <em><strong>Java</strong></em> and <em><strong>Pyhon</strong></em></p>
                 </li>
                 <li>
                     <h3>Company 2</h3>
-                    <p>work at company 2 as a <em><strong>position</strong></em></p>
+                    <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
+                    <p>Description and duties, use <em><strong>Java</strong></em> and <em><strong>Pyhon</strong></em></p>
                 </li>
                 <li>
                     <h3>Company 3</h3>
-                    <p>work at company 3 as a <em><strong>position</strong></em></p>
+                    <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
+                    <p>Description and duties, use <em><strong>Java</strong></em> and <em><strong>Pyhon</strong></em></p>
                 </li>
                 <li>
                     <h3>Company 4</h3>
-                    <p>work at company 4 as a <em><strong>position</strong></em></p>
+                    <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
+                    <p>Description and duties, use <em><strong>Java</strong></em> and <em><strong>Pyhon</strong></em></p>
                 </li>
             </ul>
         </section>
         <hr>
         <section>
             <h2>Skills</h2>
-            <ul>
-                <li>
-                    <strong>Python</strong>
-                    <div class="percent90"><span>90%</span></div>
-                </li>
-                <li>
-                    <strong>Java</strong>
-                    <div class="percent60"><span>60%</span></div>
-                </li>
-                <li>
-                    <strong>SQL</strong>
-                    <div class="percent70"><span>70%</span></div>
-                </li>
-                <li>
-                    <strong>C</strong>
-                    <div class="percent50"><span>50%</span></div>
-                </li>
-                <li>
-                    <strong>Tableau</strong>
-                    <div class="percent60"><span>60%</span></div>
-                </li>
-                <li>
-                    <strong>HTML</strong>
-                    <div class="percent70"><span>70%</span></div>
-                </li>
-                <li>
-                    <strong>CSS</strong>
-                    <div class="percent50"><span>50%</span></div>
-                </li>
-                <li>
-                    <strong>JavaScript</strong>
-                    <div class="percent50"><span>50%</span></div>
-                </li>
-
-            </ul>
+            <div class="tables">
+                <table>
+                    <caption>Technical Skills</caption>
+                    <colgroup>
+                        <col style="width: 50%;">
+                        <col style="width: 50%;">
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th>Skill</th>
+                            <th>Proficiency</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Python</td>
+                            <td>Advanced</td>
+                        </tr>
+                        <tr>
+                            <td>Java</td>
+                            <td>Intermediate</td>
+                        </tr>
+                        <tr>
+                            <td>SQL</td>
+                            <td>Advanced</td>
+                        </tr>
+                        <tr>
+                            <td>C</td>
+                            <td>Intermediate</td>
+                        </tr>
+                        <tr>
+                            <td>Tableau</td>
+                            <td>Advanced</td>
+                        </tr>
+                        <tr>
+                            <td>HTML</td>
+                            <td>Intermediate</td>
+                        </tr>
+                        <tr>
+                            <td>CSS</td>
+                            <td>Advanced</td>
+                        </tr>
+                        <tr>
+                            <td>JavaScript</td>
+                            <td>Intermediate</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <br>
+                <table>
+                    <caption>Speaking Languages</caption>
+                    <colgroup>
+                        <col style="width: 60%;">
+                        <col style="width: 40%;">
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th>Language</th>
+                            <th>Proficiency</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Chinese (Mandarin) </td>
+                            <td>Native</td>
+                        </tr>
+                        <tr>
+                            <td>Chinese (Cantonese) </td>
+                            <td>Native</td>
+                        </tr>
+                        <tr>
+                            <td>English</td>
+                            <td>Professional</td>
+                        </tr>
+                        <tr>
+                            <td>Korean</td>
+                            <td>Elementary</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </section>
+
+        <hr>
+        <div class="resume">
+            <p>Click the button below to download my resume.</p>
+            <a href="../documents/Xuewen_Yang_Resume.pdf" download>
+                <button type="button">Download Resume</button>
+            </a><br><br>
+            <iframe src="../documents/Xuewen_Yang_Resume.pdf" title="Resume"></iframe><br>
+        </div>
+    
     </main>
     
     <footer>
-        <p>&copy; 2023 Xuewen Yang</p>
+        <span>&copy; 2023 Xuewen Yang</span>
     </footer>
 </body>
 </html>
