--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Projects</title>
 </head>
@@ -23,16 +23,12 @@
                 <img src="#" alt="Project 1 Image">
                 <figcaption>Project 1 Image Caption</figcaption>
             </figure>
-            <a href="#">View Project</a>
+            <a href="#" target="_blank">View Project</a>
         </section>
         <section>
             <h2>Project 2</h2>
             <p>Description of Project 2</p>
-            <figure>
-                <img src="#" alt="Project 2 Image">
-                <figcaption>Project 2 Image Caption</figcaption>
-            </figure>
-            <a href="#">View Project</a>
+            <a href="https://daphneyyy.github.io/SudokuSolver_JS/index.html" target="_blank">View Project</a>
         </section>
         <section>
             <h2>Project 3</h2>
@@ -41,11 +37,11 @@
                 <img src="#" alt="Project 3 Image">
                 <figcaption>Project 3 Image Caption</figcaption>
             </figure>
-            <a href="#">View Project</a>
+            <a href="#" target="_blank">View Project</a>
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 Xuewen Yang</p>
+        <span>&copy; 2023 Xuewen Yang</span>
     </footer>
 </body>
 </html>
