Add experiment page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="pages/about.html">About</a></li>
                 <li><a href="pages/projects.html">Projects</a></li>
                 <li><a href="pages/contact.html">Contact</a></li>
+                <li><a href="pages/experiment.html">Experiment</a></li>
             </ul>
         </nav>
     </header>
