--- a/pages/projects.html
+++ b/pages/projects.html
@@ -12,6 +12,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="experiment.html">Experiment</a></li>
             </ul>
         </nav>
     </header>
@@ -28,7 +29,11 @@
         <section>
             <h2>Project 2</h2>
             <p>Description of Project 2</p>
-            <a href="https://daphneyyy.github.io/SudokuSolver_JS/index.html" target="_blank">View Project</a>
+            <figure>
+                <img src="#" alt="Project 2 Image">
+                <figcaption>Project 2 Image Caption</figcaption>
+            </figure>
+            <a href="#" target="_blank">View Project</a>
         </section>
         <section>
             <h2>Project 3</h2>
