Complete html pages

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
-    <meta name="description"
-        content="Portfolio Web page built by Xuewen Yang" />
+    <meta name="description" content="Portfolio Web page built by Xuewen Yang">
     <meta name="author" content="Xuewen Yang">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="#" rel="stylesheet">
-    <link href="#" rel="icon" />
-    <script src></script>
+    <link href="#" rel="icon">
+    <script src="#"></script>
 </head>
 <body>
     <header>
@@ -29,15 +28,25 @@
         <picture>
             <source media="(min-width:650px)" srcset="#">
             <source media="(min-width:465px)" srcset="#">
-            <img src="#" alt="Image description" height="" width="">
+            <img src="#" alt="Background">
         </picture>
-
+        <br>
+        <br>
         <section>
             <h2>...</h2>
+            <video controls>
+                <source src="#" type="video/mp4">
+                <p>Your browser doesn't support HTML5 video.</p>
+            </video>
         </section>
-
+        <br>
+        <br>
         <section>
             <h2>...</h2>
+            <video controls>
+                <source src="#" type="video/mp4">
+                <p>Your browser doesn't support HTML5 video.</p>
+            </video>
         </section>
 
         <section>
