--- a/pages/about.html
+++ b/pages/about.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <main>
-        <img src="#" alt="Headshot" height="" width="">
+        <img src="#" alt="Headshot">
         <section>
             <h2>Personal Info</h2>
             <ul>
@@ -54,24 +54,30 @@
                 <li>
                     <h3>Company 1</h3>
                     <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
-                    <p>Description and duties, use <em><strong>Java</strong></em> and <em><strong>Pyhon</strong></em></p>
+                    <p>Description and duties, use <em><strong>Java</strong></em> and <em><strong>Python</strong></em></p>
                 </li>
                 <li>
                     <h3>Company 2</h3>
                     <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
-                    <p>Description and duties, use <em><strong>Java</strong></em> and <em><strong>Pyhon</strong></em></p>
+                    <p>Description and duties, use <em><strong>Java</strong></em> and <em><strong>Python</strong></em></p>
                 </li>
                 <li>
                     <h3>Company 3</h3>
                     <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
-                    <p>Description and duties, use <em><strong>Java</strong></em> and <em><strong>Pyhon</strong></em></p>
+                    <p>Description and duties, use <em><strong>Java</strong></em> and <em><strong>Python</strong></em></p>
                 </li>
                 <li>
                     <h3>Company 4</h3>
                     <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
-                    <p>Description and duties, use <em><strong>Java</strong></em> and <em><strong>Pyhon</strong></em></p>
+                    <p>Description and duties, use <em><strong>Java</strong></em> and <em><strong>Python</strong></em></p>
                 </li>
             </ul>
+            <div class="resume">
+                <p>Click the button below to download my resume.</p>
+                <button type="button">Download Resume</button>
+                <br><br>
+                <iframe src="../documents/Xuewen_Yang_Resume.pdf" title="Resume"></iframe><br>
+            </div>
         </section>
         <hr>
         <section>
@@ -79,10 +85,6 @@
             <div class="tables">
                 <table>
                     <caption>Technical Skills</caption>
-                    <colgroup>
-                        <col style="width: 50%;">
-                        <col style="width: 50%;">
-                    </colgroup>
                     <thead>
                         <tr>
                             <th>Skill</th>
@@ -158,16 +160,6 @@
                 </table>
             </div>
         </section>
-
-        <hr>
-        <div class="resume">
-            <p>Click the button below to download my resume.</p>
-            <a href="../documents/Xuewen_Yang_Resume.pdf" download>
-                <button type="button">Download Resume</button>
-            </a><br><br>
-            <iframe src="../documents/Xuewen_Yang_Resume.pdf" title="Resume"></iframe><br>
-        </div>
-    
     </main>
     
     <footer>
