--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <title>Projects</title>
+    <style>
+        body {
+            border: 4px solid #b8b8b8;
+        }
+    </style>
 </head>
 <body>
     <header>
