Added Einstein's formula

--- a/pages/experiment.html
+++ b/pages/experiment.html
@@ -67,6 +67,23 @@
             </svg>
         </div>
         <hr>
+        <section id="ec">
+            <h3>Extra Credit</h3>
+            <div>
+                <h4>Einstein's famous formula</h4>
+                <math>
+                    <mrow>
+                        <mi>E</mi>
+                        <mo>=</mo>
+                        <mi>m</mi>
+                        <msup>
+                            <mi>c</mi>
+                            <mn>2</mn>
+                        </msup>
+                    </mrow>
+                </math>
+            </div>
+        </section>
     </main>
 
     <footer>
