--- a/pages/about.html
+++ b/pages/about.html
@@ -130,8 +130,8 @@
                 <table>
                     <caption>Speaking Languages</caption>
                     <colgroup>
-                        <col style="width: 60%;">
-                        <col style="width: 40%;">
+                        <col >
+                        <col >
                     </colgroup>
                     <thead>
                         <tr>
