Initial css draft of about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -93,24 +93,44 @@
                             <h3>Company 1</h3>
                             <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
                             <p>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
                                 and <em><strong>Python</strong></em></p>
                         </li>
                         <li>
                             <h3>Company 2</h3>
                             <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
                             <p>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
                                 and <em><strong>Python</strong></em></p>
                         </li>
                         <li>
                             <h3>Company 3</h3>
                             <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
                             <p>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
                                 and <em><strong>Python</strong></em></p>
                         </li>
                         <li>
                             <h3>Company 4</h3>
                             <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
                             <p>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
                                 and <em><strong>Python</strong></em></p>
                         </li>
                     </ul>
@@ -118,17 +138,20 @@
                 <div class="resume">
                     <p>Click the button below to download my resume.</p>
                     <iframe src="../documents/Xuewen_Yang_Resume.pdf"
-                        title="Resume"></iframe><br>
+                        title="Resume"></iframe>
                     <br><br>
                     <button type="button">Download Resume</button>
                 </div>
             </section>
-            <hr>
-            <section>
+            <section class="skills">
                 <h2>Skills</h2>
                 <div class="tables">
                     <table>
                         <caption>Technical Skills</caption>
+                        <!-- <colgroup>
+                            <col style="width: 50%;">
+                            <col style="width: 50%;">
+                        </colgroup> -->
                         <thead>
                             <tr>
                                 <th>Skill</th>
@@ -173,10 +196,10 @@
                     <br>
                     <table>
                         <caption>Speaking Languages</caption>
-                        <colgroup>
-                            <col>
-                            <col>
-                        </colgroup>
+                        <!-- <colgroup>
+                            <col style="width: 60%;">
+                            <col style="width: 40%;">
+                        </colgroup> -->
                         <thead>
                             <tr>
                                 <th>Language</th>
