Added open sans fonts

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="description" content="Portfolio Web page built by Xuewen Yang">
     <meta name="author" content="Xuewen Yang">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link type="text/css" href="css/styles.css" rel="stylesheet">
+    <link type="text/css" href="css/styles-home.css" rel="stylesheet">
     <link href="#" rel="icon">
     <script src="#"></script>
 </head>
 <body>
     <header>
-        <h1>Xuewen(Daphne) Yang's Portfolio</h1>
+        <h1>Xuewen Yang's Portfolio</h1>
+        <h3>Welcome to my site!</h3>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -25,32 +28,40 @@
     </header>
 
     <main>
-        <picture>
+        <!-- <picture>
             <source media="(min-width:650px)" srcset="#">
             <source media="(min-width:465px)" srcset="#">
             <img src="#" alt="Background">
         </picture>
         <br>
-        <br>
-        <section>
-            <h2>...</h2>
+        <br> -->
+        <section class="videos" id="video1">
             <video controls>
                 <source src="#" type="video/mp4">
                 <p>Your browser doesn't support HTML5 video.</p>
             </video>
+            <div class="video-description">
+                <p>some text some text some text some text some text</p>
+                <p>some text some text some text some text some text</p>
+                <p>some text some text some text some text some text</p>
+                <p>some text some text some text some text some text</p>
+                <p>some text some text some text some text some text</p>
+                <p>some text some text some text some text some text</p>
+            </div>
         </section>
-        <br>
-        <br>
-        <section>
-            <h2>...</h2>
+        <section class="videos" id="video2">
+            <div class="video-description">
+                <p>some text some text some text some text some text</p>
+                <p>some text some text some text some text some text</p>
+                <p>some text some text some text some text some text</p>
+                <p>some text some text some text some text some text</p>
+                <p>some text some text some text some text some text</p>
+                <p>some text some text some text some text some text</p>
+            </div>
             <video controls>
                 <source src="#" type="video/mp4">
                 <p>Your browser doesn't support HTML5 video.</p>
             </video>
-        </section>
-
-        <section>
-            <h2>...</h2>
         </section>
     </main>
 
