--- a/pages/experiment.html
+++ b/pages/experiment.html
@@ -3,6 +3,7 @@
 <head>
     <title>Experiment</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link type="text/css" href="../css/styles.css" rel="stylesheet">
 </head>
 <body>
