--- a/pages/about.html
+++ b/pages/about.html
@@ -65,7 +65,7 @@
                 </table>
 
                 <aside>
-                    <p>San Francisco, perched on the California peninsula, is a
+                    <p><span id="san_francisco">San Francisco</span>, perched on the California peninsula, is a
                         culturally diverse and innovative city, renowned for its
                         iconic landmarks, tech industry influence, and vibrant
                         culture, set against a backdrop of steep hills and a
